Closed Bug 593868 Opened 15 years ago Closed 15 years ago

fix OpenGL layers on win32 with d2d content

Categories

(Core :: Graphics, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
blocking2.0 --- beta7+

People

(Reporter: vlad, Assigned: vlad)

Details

Attachments

(1 file)

This obviously isn't ideal from performance, but it gets things rendering with this combination instead of asserting out all over the place.
Attachment #472474 - Flags: review?(jmuizelaar)
Attachment #472474 - Flags: review?(jmuizelaar) → review+
Status: NEW → RESOLVED
blocking2.0: --- → beta6+
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: