b=593868; fix OpenGL layers on win32 with d2d content; r=jrmuizel